--- a/drainage.html
+++ b/drainage.html
@@ -33,19 +33,17 @@
 <body>
     <header class="">
         <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
-            <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d"
-                class="bg-black rounded-md ">
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" class="bg-black rounded-md ">
                 <img src="./images/Facebook-transparent.png" width="40" alt="">
             </a>
             <a target="_blank"
-                href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D"
-                class="bg-black rounded-md flex items-center justify-center">
+            href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D" class="bg-black rounded-md flex items-center justify-center">
                 <img src="./images/Google-transparent.png" width="40" alt="">
             </a>
-
+           
         </div>
-        <div class="bg-black py-6 flex items-center justify-between px-[5%]">
-            <div>
+        <div class="bg-black lg:py-6 flex items-center justify-between lg:px-[5%]">
+            <div class="hidden lg:block">
                 <img src="./images/logo.png" width="100" alt="">
             </div>
             <!-- desktop navbar -->
@@ -66,19 +64,28 @@
                 <a href="#contact" class="book-online hover:text-white">BOOK ONLINE</a>
             </nav>
 
-            <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90]">
+            <div class="bg-primary p-6 lg:hidden">
+                <a href="tel:+(260) 744-1944">
+                    <svg class="text-white scale-[1.5] " stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
+                    </a>
+            </div>
+
+            <div class="lg:hidden">
+                <img src="./images/logo.png" width="100" alt="">
+            </div>
+
+            <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90] pr-[5%]">
                 <span class="w-6 h-0.5 bg-primary active transition-all duration-300"></span>
                 <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
                 <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
             </button>
-
             <!-- mobile navbar -->
             <nav id="mobile-nav"
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <div class="text-primary absolute right-10 top-10" id="close">x</div>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl   " href="#">Meet The Team </a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl   " href="#">About Us</a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl   " href="#">Gallery</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">Meet The Team </a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">About Us</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">Gallery</a>
             </nav>
         </div>
     </header>
