--- a/index.html
+++ b/index.html
@@ -64,23 +64,21 @@
                 <a href="#contact" class="book-online hover:text-white">BOOK ONLINE</a>
             </nav>
 
-
-            <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90] pl-[5%]">
-                <span class="w-6 h-0.5 bg-primary active transition-all duration-300"></span>
-                <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
-                <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
-            </button>
-
-            <div class="lg:hidden">
-                <img src="./images/logo.png" width="100" alt="">
-            </div>
-
             <div class="bg-primary p-6 lg:hidden">
                 <a href="tel:+(260) 744-1944">
                     <svg class="text-white scale-[1.5] " stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
                     </a>
             </div>
 
+            <div class="lg:hidden">
+                <img src="./images/logo.png" width="100" alt="">
+            </div>
+
+            <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90] pr-[5%]">
+                <span class="w-6 h-0.5 bg-primary active transition-all duration-300"></span>
+                <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
+                <span class="w-6 h-0.5 bg-primary transition-all duration-300"></span>
+            </button>
             <!-- mobile navbar -->
             <nav id="mobile-nav"
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
@@ -1065,6 +1063,9 @@
                                 <select name="Preferred day of 1st service" id="Preferreddayofservice" required>
                                     <option value="Monday">Monday</option>
                                     <option value="Tuesday">Tuesday</option>
+                                    <option value="Wednesday">Wednesday</option>
+                                    <option value="Thursday">Thursday</option>
+                                    <option value="Friday">Friday</option>
                                     <!-- Add other options -->
                                 </select>
                             </div>
@@ -1211,7 +1212,6 @@
             </section>
 
         </section>
-
     </main>
     <footer class="px-[5%] bg-black">
         <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
