--- a/drainage.html
+++ b/drainage.html
@@ -48,9 +48,9 @@
             </div>
             <!-- desktop navbar -->
             <nav class="desktop-menu hidden lg:flex gap-5 items-center">
-                <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">Meet The Team </a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">About Us</a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="#">Gallery</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
                 <a href="tel:+260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
                         <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
@@ -83,9 +83,9 @@
             <nav id="mobile-nav"
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <div class="text-primary absolute right-10 top-10" id="close">x</div>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">Meet The Team </a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">About Us</a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="#">Gallery</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./meet.html">Meet The Team </a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./gallery.html">Gallery</a>
             </nav>
         </div>
     </header>
