--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
                     <p class="about-para">
                         Booking is usually the hard part of the process and sometimes you don’t even know if you gotten through. With our system, you can either call to book and can give us your availability or you can book online by clicking here! Once we’ve received your request, we will always reply with a confirmation and schedule a date and time best suited for you. From then on, you can relax and ask questions while we fix your problem!
                     </p>
-                    <a href="tel:+260-744-1944" class="card-btn gap-2 flex items-center">
+                    <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                         <div class="w-[25px]">
                             <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
                                 style="enable-background:new 0 0 28.314 28.323" xml:space="preserve">
@@ -483,40 +483,24 @@
     <footer class="px-[5%] bg-black">
         <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
             <div class="flex w-full flex-col lg:flex-row gap-10 justify-between">
-                <a href="/" class="img-container flex items-center justify-center">
+                <a href="/" class="img-container flex items-center justify-center" onclick="scrollToTop()">
                     <img src="./images/logo.png" alt="logo" width="250" height="250" />
                 </a>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 items-center justify-center">
                     <ul
                         class="p flex flex-col justify-center items-center gap-6 sm:justify-start sm:items-start text-center">
                         <li class="flex gap-2 items-start">
-                            <svg class="mt-1" stroke="currentColor" fill="currentColor" stroke-width="0"
-                                viewBox="0 0 384 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z">
-                                </path>
-                            </svg>
+                            <svg class="mt-1" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 384 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
                             <a href="https://maps.app.goo.gl/NGC6gzFgLkK41BhK7" class="text-start" target="_blank">
                                 3105 Oxford Street, Fort Wayne, Indiana 46806
                             </a>
                         </li>
                         <li class="flex items-center gap-2">
-                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
-                                height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z">
-                                </path>
-                            </svg>
-                            <a href="tel:+(260) 744-1944" target="_blank">(260) 744-1944</a>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
+                            <a href="tel:+1(260) 744-1944" target="_blank">(260) 744-1944</a>
                         </li>
                         <li class="flex items-center gap-2">
-                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
-                                height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                <path fill="none" d="M0 0h24v24H0z"></path>
-                                <path
-                                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z">
-                                </path>
-                            </svg>
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"></path></svg>
                             <a href="mailto:copelandcontracting@comcast.net"
                                 target="_blank">copelandcontracting@comcast.net</a>
                         </li>
@@ -529,8 +513,7 @@
                 </div>
                 <div
                     class="bg- flex items-center justify-center mt-5 lg:mt-0 lg:justify-end px-[5%] lg:px-20 py-2 gap-3">
-                    <a href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" target="_blank"
-                        class="bg-black rounded-md ">
+                    <a href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" target="_blank" class="bg-black rounded-md ">
                         <img src="./images/Facebook-transparent.png" width="40" alt="">
                     </a>
                     <a target="_blank"
