--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     experience top-notch service? Contact us for some of the best plumbing Fort Wayne has to offer!
                     <br> <br>
                 <p class="text-center">
-                    Call Copeland Contracting at <a class="text-primary" href="tel:+(260) 744-1944">(260) 744-1944</a>
+                    Call Copeland Contracting at <a class="text-primary" href="tel:+1(260) 744-1944">(260) 744-1944</a>
                     today!
                 </p>
                 </p>
@@ -864,7 +864,7 @@
                         </div>
                         Book Online
                     </a>
-                    <a href="tel:+260-744-1944" class="card-btn gap-2 flex items-center">
+                    <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                         <div class="w-[25px]">
                             <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
                                 style="enable-background:new 0 0 28.314 28.323" xml:space="preserve">
@@ -1227,7 +1227,7 @@
                         </li>
                         <li class="flex items-center gap-2">
                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
-                            <a href="tel:+(260) 744-1944" target="_blank">(260) 744-1944</a>
+                            <a href="tel:+1(260) 744-1944" target="_blank">(260) 744-1944</a>
                         </li>
                         <li class="flex items-center gap-2">
                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"></path></svg>
