--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <!-- desktop navbar -->
             <nav class="desktop-menu hidden lg:flex gap-5 items-center">
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">Our History</a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
                 <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
@@ -95,19 +95,16 @@
             <nav id="mobile-nav"
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./meet.html">Meet The Team </a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">Our History</a>
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./gallery.html">Gallery</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section class="about-company h-[400px] relative">
-            <div class="h-full flex items-center px-[5%] relative z-[2]">
-                <h1 class="heading text-3xl lg:text-6xl text-white">ABOUT THE COMPANY</h1>
-            </div>
-            <div class="h-full top-0 w-full absolute bg-zinc-800 opacity-40">
-            </div>
+        <section class="about-company h-[200px] lg:h-[400px] relative">
+            
+           
         </section>
         <section class="about-content px-[5%] py-10">
             <div class="lg:w-[70%]">
@@ -124,10 +121,10 @@
                     <img src="./images/BB236F46-66CD-405D-9DD1-353FF1B82E34.png" class="h-[300px] w-full" alt="">
                 </div>
                 <div class="lg:w-1/2">
-                    <h4 class="heading text-primary text-3xl uppercase">A plumbing and heating company</h4>
-                    <p class="leading-[2rem]">Copeland Contracting has worked on a lot of new housing built in the inner city recently. Their deep resume includes the pool at Freimann Square, the Lafayette Medical Center begun by Dr. Alfred Stovall…that impressive building was one of his first jobs. </p>
+                    <h4 class="heading text-primary text-3xl uppercase">A Local Plumbing Company</h4>
+                    <p class="leading-[2rem]">Copeland Contracting has worked on a lot of new housing built in the inner city recently. Our deep resume includes the pool at Freimann Square, the Lafayette Medical Center begun by Dr. Alfred Stovall…that impressive building was one of his first jobs. </p>
                     <br>
-                    <p class="leading-[2rem]">We do all facets of plumbing. “We snake out drains…repair and install boilers, new construction, repair and remodeling.”  Copeland has worked those travel, name-drop jobs too, including clients in Hawaii, New York, the Ozark’s in Arkansas, and the Army Corps of Engineering in Pittsburgh. But they will still come out to your house for usual plumbing. Regular folks are our folks.  
+                    <p class="leading-[2rem]">We do all facets of plumbing. “We snake out drains…repair and install boilers, new construction, repair and remodeling.”  Copeland has worked those travel, name-drop jobs too, including clients in Hawaii, New York, the Ozark’s in Arkansas, and the Army Corps of Engineering in Pittsburgh. But we will still come out to your house for usual plumbing. Regular folks are our folks.  
                     </p>
                     <div class="flex items-center justify-start mt-3">
                     <a href="#contact" class="card-btn gap-2 flex items-center">
