--- a/meet.html
+++ b/meet.html
@@ -54,7 +54,7 @@
             <!-- desktop navbar -->
             <nav class="desktop-menu hidden lg:flex gap-5 items-center">
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">Our History</a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
                 <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
@@ -95,7 +95,7 @@
             <nav id="mobile-nav"
                 class="fixed z-[99] inset-x-0 top-0 h-screen bg-black transform translate-x-full transition-transform duration-300 lg:hidden flex flex-col gap-5 justify-center items-center text-2xl text-secondary lg:text-lg">
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./meet.html">Meet The Team </a>
-                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">About Us</a>
+                <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./about.html">Our History</a>
                 <a class="hover:scale-[1.1] duration-200 ease text-xl" href="./gallery.html">Gallery</a>
             </nav>
         </div>
